--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
+    <div class="navbar-menu">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa neque beatae
+      omnis veritatis eius quidem esse, animi corrupti numquam consequuntur.
+    </div>
+    <div class="navbar-burger">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+      necessitatibus laboriosam commodi eligendi assumenda fuga velit porro
+      minus temporibus! Alias.
+    </div>
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
